# TimeSeriesCourseSolution

./: README.md  pyproject.toml  task01_eda.ipynb  task02_statforecast.ipynb  task03_ml_dl.ipynb  task04_pipeline.ipynb  task1.ipynb  task2.ipynb  task3.ipynb  task4.ipynb
task1_outputs/: fr_clean.csv  test_clean.csv
task2_outputs/: model_comparison_metrics.csv
task3_outputs/: dl.csv  ml.csv  ml_dl_comparison.csv
task4_outputs/: FINAL_REPORT.md  model_metrics.csv  performance_benchmarks.csv  statistical_tests.csv  test.csv  train.csv
