[project]
name = "timeseriescoursesolution"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.9",
    "mlforecast>=1.0.31",
    "neuralforecast>=3.1.9",
    "numpy>=2.4.6",
    "pandas>=2.3.3",
    "psutil>=7.2.2",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "statsforecast>=2.0.1",
    "statsmodels>=0.14.6",
    "window-ops>=0.0.15",
]
